--- a/BMGD/BMGD.vcxproj.filters
+++ b/BMGD/BMGD.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="Game\GameMain.cpp">
       <Filter>ゲーム</Filter>
     </ClCompile>
+    <ClCompile Include="Game\ObjectBase.cpp">
+      <Filter>ゲーム</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImaseLib\FPSTimer.h">
@@ -129,6 +132,9 @@
       <Filter>ゲーム</Filter>
     </ClInclude>
     <ClInclude Include="Game\GameMain.h">
+      <Filter>ゲーム</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\ObjectBase.h">
       <Filter>ゲーム</Filter>
     </ClInclude>
   </ItemGroup>
