--- a/BMGD/BMGD.vcxproj.filters
+++ b/BMGD/BMGD.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="Game\ObjectBase.cpp">
       <Filter>ゲーム</Filter>
     </ClCompile>
+    <ClCompile Include="ADX2Le.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImaseLib\FPSTimer.h">
@@ -136,6 +139,12 @@
     </ClInclude>
     <ClInclude Include="Game\ObjectBase.h">
       <Filter>ゲーム</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\CueSheet_0.h">
+      <Filter>ゲーム</Filter>
+    </ClInclude>
+    <ClInclude Include="ADX2Le.h">
+      <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
